# EJE

./: .dockerignore  .env.example  .gitignore  AGENT_DECISIONS.md  AGENT_SUMMARY.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  ELEANOR_V7_PLAN.md  FEATURE_GAPS_COMPLETION_REPORT.md  FEATURE_GAP_ANALYSIS.md  FUTURE_ENHANCEMENTS.md  IMPROVEMENTS_V1.4.0.md  Makefile.monitoring  PHASE_3_PR_DESCRIPTION.md  PHASE_3_TESTING_REPORT.md  PHASE_4_ROADMAP.md  PHASE_5B_SUMMARY.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  REMAINING_ISSUES_REPORT.md  WORLD_BANK_ALIGNMENT.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  eje_code_review (1).py  eje_code_review (10).py  eje_code_review (3).py  eje_code_review (5).py  eje_code_review (7).py  eje_code_review (8).py  eje_code_review (9).py  init-db.sql  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
ELEANOR_Moral_Ops_Center/: README.md
Monday/: eje_code_review (2).py  eje_code_review (4).py  eje_code_review (6).py  eje_code_review.py
benchmarks/: performance_benchmarks.py
config/: compliance_legal_profile.yaml  content_moderation_profile.yaml  critics.yaml  global.yaml  healthcare_ethics_profile.yaml  hr_profile.yaml  precedent.yaml  research_ethics_profile.yaml  rights_hierachy.yaml
core/: critic_aggregator.py  decision.py  evidence_normalizer.py  evidence_serializer.py  metadata_enricher.py  precedent_ingestion.py  precedent_ranking.py  precedent_storage.py  similarity_search.py  test_critic_aggregator.py  test_decision.py  test_evidence_bundle.py  test_metadata_enricher.py  test_normalizer.py  test_precedent_engine.py  test_precedent_ingestion.py  test_precedent_ranking.py  test_precedent_storage.py  test_serializer.py  test_similarity_search.py
critics/: __init__.py  registry.py
docs/: AUDIT_LOG_SECURITY.md  AUDIT_LOG_WORM_ENFORCEMENT.md  AUDIT_SECURITY.md  ELEANOR_Governance_Spec_v2_1.html  GLOSSARY.md  QUICKSTART.md  cd_pipeline.md  critic_marketplace.md  evidence_bundle.md  getting_started.md  helm_chart.md  index.md  kubernetes_manifests.md  precedent_system.md  review_ops_center_hardening.md  semantic_precedent_search.md
domains/: domain_config.py
governance/: README.md  __init__.py  adjudicate.py  audit.py  gcr_analyzer.py  gcr_ledger.json  rules.py  version_compat.py
precedent/: __init__.py  embeddings.py  retrieval.py  store.py
schemas/: README.md  evidence_bundle.json  validate_schema.py
scripts/: create_gap_issues.sh  create_issues_via_api.py  migrate_precedents.py  rebrand_to_ejc.py
sdk/: README.md
security/: FAILURE_MODES.md
tests/: __init__.py  conftest.py  test_api_integration.py  test_bias_critic.py  test_calibration.py  test_context_system.py  test_differential_privacy.py  test_drift_detection.py  test_evidence_bundle.py  test_explainability_integration.py  test_fallback_integration.py  test_governance.py  test_governance_compliance.py  test_governance_modes.py  test_integration_full_pipeline.py  test_migrations.py  test_override_integration.py  (+10 more)
(+406 files in other folders)
